--- a/Changes
+++ b/Changes
@@ -1,8 +1,10 @@
 Revision history for Perl extension Tie::TextDir.
 
-0.07
+0.07  Sat Sep  4 12:16:11 CDT 2021
   - Support for hierarchical subdirectories when writing files, useful
     when dealing with a bit amount of files. [patch by Alberto Simões]
+
+  - Updated some build stuff.
 
 0.06  Tue Sep  9, 2003
 
